third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/borrow_field_chain.exp
module 0x8675309::M {
    struct X1 {
        x2: X2,
    }
    struct X2 {
        x3: X3,
    }
    struct X3 {
        f: u64,
    }
    fun t0(x1: &X1, x1_mut: &mut X1) {
        &x1.x2;
        &&x1.x2.x3;
        &&&x1.x2.x3.f;
        &x1_mut.x2;
        &&x1_mut.x2.x3;
        &&&x1_mut.x2.x3.f;
        &mut x1_mut.x2;
        &mut &mut x1_mut.x2.x3;
        &mut &mut &mut x1_mut.x2.x3.f;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ borrow_field_chain.move:13:9
   │
13 │         &&x1.x2.x3;
   │         ^^
   │         │
   │         Unexpected '&&'
   │         Expected an expression term
